--- a/produtos.html
+++ b/produtos.html
@@ -4,20 +4,22 @@
     <head>
         <meta charset="UTF-8">
         <title>Barbearia Test</title>
+        <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="produtosa.css">
     </head>
 
     <body>
         <header class="cabeca">
-            <img src="logo.png">
+            <div class="divca">
+                <img src="Imagens/logo.png">
 
-            <nav>
-                <ul>
-                    <li><a href="new_index.html">Home</a></li>
-                    <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="new_index.html">Contato</a></li>
-                </ul>
-            </nav>
-
+                <nav class="lista">
+                    <ul>
+                        <li><a href="new_index.html">Home</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="new_index.html">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
     </body>
