Finalização da tela de produtos
Finalização da tela de produtos

--- a/produtos.html
+++ b/produtos.html
@@ -22,4 +22,26 @@
                 </nav>
             </div>
         </header>
+        <Main>
+            <ul class="lista_principal">
+                <li>
+                    <h2>cabelo</h2>
+                    <img src="Imagens/cabelo.jpg">
+                    <p>Tesoura ou barba, como o cliente preferir</p>
+                    <p class="preco">R$ 25,00</p>
+                </li>
+                <li>
+                    <h2>barba</h2>
+                    <img src="Imagens/barba.jpg">
+                    <p>Corte e desenho profissional de barba</p>
+                    <p class="preco">R$ 18,00</p>
+                </li>
+                <li>
+                    <h2> cabelo e barba</h2>
+                    <img src="Imagens/cabelo+barba.jpg">
+                    <p>Pacote completo de cabelo e barba</p>
+                    <p class="preco">R$ 35,00</p>
+                </li>
+            </ul>
+        </Main>
     </body>
