--- a/produtos.html
+++ b/produtos.html
@@ -37,11 +37,16 @@
                     <p class="preco">R$ 18,00</p>
                 </li>
                 <li>
-                    <h2> cabelo e barba</h2>
+                    <h2> cabelo+barba</h2>
                     <img src="Imagens/cabelo+barba.jpg">
                     <p>Pacote completo de cabelo e barba</p>
                     <p class="preco">R$ 35,00</p>
                 </li>
             </ul>
         </Main>
+
+        <footer class="rodape">
+            <img src="Imagens/logo-branco.png">
+            <p class="coper">&copy;copyryte Barbearia Alura 2023</p>
+        </footer>
     </body>
