--- a/produtos.html
+++ b/produtos.html
@@ -1,52 +1,53 @@
 <!DOCTYPE html>
-<html  lang="pt-br">
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>Produtos - Barbearia Alura</title>
 
-    <head>
-        <meta charset="UTF-8">
-        <title>Barbearia Test</title>
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="produtosa.css">
-    </head>
+		<link rel="stylesheet" href="reset.css">
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<header>
+			<div class="caixa">
+				<h1><img src="logo.png"></h1>
 
-    <body>
-        <header class="cabeca">
-            <div class="divca">
-                <img src="Imagens/logo.png">
+				<nav>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="produtos.html">Produtos</a></li>
+						<li><a href="contato.html">Contato</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
 
-                <nav class="lista">
-                    <ul>
-                        <li><a href="new_index.html">Home</a></li>
-                        <li><a href="produtos.html">Produtos</a></li>
-                        <li><a href="new_index.html">Contato</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
-        <Main>
-            <ul class="lista_principal">
-                <li>
-                    <h2>cabelo</h2>
-                    <img src="Imagens/cabelo.jpg">
-                    <p>Tesoura ou barba, como o cliente preferir</p>
-                    <p class="preco">R$ 25,00</p>
-                </li>
-                <li>
-                    <h2>barba</h2>
-                    <img src="Imagens/barba.jpg">
-                    <p>Corte e desenho profissional de barba</p>
-                    <p class="preco">R$ 18,00</p>
-                </li>
-                <li>
-                    <h2> cabelo+barba</h2>
-                    <img src="Imagens/cabelo+barba.jpg">
-                    <p>Pacote completo de cabelo e barba</p>
-                    <p class="preco">R$ 35,00</p>
-                </li>
-            </ul>
-        </Main>
+		<main>
+			<ul class="produtos">
+				<li>
+					<h2>Cabelo</h2>
+					<img src="cabelo.jpg">
+					<p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
+					<p class="produto-preco">R$ 25,00</p>
+				</li>
+				<li>
+					<h2>Barba</h2>
+					<img src="barba.jpg">
+					<p class="produto-descricao">Corte e desenho profissional de barba</p>
+					<p class="produto-preco">R$ 18,00</p>
+				</li>
+				<li>
+					<h2>Cabelo + Barba</h2>
+					<img src="cabelo+barba.jpg">
+					<p class="produto-descricao">Pacote completo de cabelo e barba</p>
+					<p class="produto-preco">R$ 35,00</p>
+				</li>
+			</ul>
+		</main>
 
-        <footer class="rodape">
-            <img src="Imagens/logo-branco.png">
-            <p class="coper">&copy;copyryte Barbearia Alura 2023</p>
-        </footer>
-    </body>
+		<footer>
+			<img src="logo-branco.png">
+			<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+		</footer>
+	</body>
+</html>
